fix get issue id