@@ -6,6 +6,7 @@ import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.Objects;
@@ -17,13 +18,14 @@ import java.util.regex.Pattern;
  */
 public class CommitDialog extends DialogWrapper {
 
+    private static final String GIT_LOG_COMMAND = "git rev-parse --abbrev-ref HEAD";
     private final CommitPanel panel;
 
     CommitDialog(@Nullable Project project, CommitMessage commitMessage) throws IOException, InterruptedException {
         super(project);
-        String branchName = getCurrentGitBranch();
-        if (!branchName.equals("master")) {
-            Matcher match = Pattern.compile("feature/([a-zA-Z]+)(-)([0-9]+)*").matcher(branchName);
+        String branchName = getCurrentGitBranch(project.getBasePath());
+        if (!branchName.matches("^([^0-9]*)$")) {
+            Matcher match = Pattern.compile("feature/([a-zA-Z]+)(-)([0-9]+)*").matcher("feature/KC-14");
             if (match.find())
                 commitMessage.setClosedIssues(match.group().substring(8));
         }
@@ -33,14 +35,24 @@ public class CommitDialog extends DialogWrapper {
         init();
     }
 
-    public static String getCurrentGitBranch() throws IOException, InterruptedException {
-        Process process = Runtime.getRuntime().exec( "git rev-parse --abbrev-ref HEAD" );
-        process.waitFor();
-
-        BufferedReader reader = new BufferedReader(
-                new InputStreamReader( process.getInputStream() ) );
-
+    public static String getCurrentGitBranch(String filePath) throws IOException {
+        File workingDirectory = new File(filePath);
+        ProcessBuilder processBuilder;
+        String osName = System.getProperty("os.name");
+        if (osName.contains("Windows")) {
+            processBuilder = new ProcessBuilder("cmd", "/C", GIT_LOG_COMMAND);
+        } else {
+            processBuilder = new ProcessBuilder("sh", "-c", GIT_LOG_COMMAND);
+        }
+        Process process = processBuilder
+                .directory(workingDirectory)
+                .start();
+        BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
         return reader.readLine();
+    }
+
+    public static void main(String[] args) throws IOException {
+        System.out.println(getCurrentGitBranch("C:\\Users\\naisa\\IdeaProjects\\commit-template-with-issue-id").matches("^([^0-9]*)$"));
     }
 
     @Nullable
